refactor: examples folder structure

--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,5 @@
 {
-  "workspace": ["./event-streamer"],
+  "workspace": ["./examples/*"],
   "nodeModulesDir": "auto",
   "imports": {
     "@colibri/core": "jsr:@colibri/core@^0.10.3",
