--- a/examples/event-streamer/deno.json
+++ b/examples/event-streamer/deno.json
@@ -8,7 +8,6 @@
     "ingest:archive": "deno run -A --unstable ./ingest-archive.ts"
   },
   "imports": {
-    "@/": "./src/",
-    "jsr:@colibri/core": "jsr:@colibri/core@^0.9.0"
+    "@/": "./src/"
   }
 }
