--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,9 @@
 {
-  "workspace": ["./examples/*"],
+  "workspace": ["./examples/*", "./getting-started/*"],
   "nodeModulesDir": "auto",
   "imports": {
-    "@colibri/core": "jsr:@colibri/core@^0.11.0",
+    "@/": "./src/",
+    "@colibri/core": "jsr:@colibri/core@^0.11.2",
     "@colibri/event-streamer": "jsr:@colibri/event-streamer@^0.2.0",
     "stellar-sdk": "npm:@stellar/stellar-sdk@^14.3.3",
     "buffer": "npm:buffer@^6.0.3",
